# cppcord

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
resources/: resources.qrc
src/: main.cpp
src/audio/: AudioManager.cpp  AudioManager.h  OpusCodec.cpp  OpusCodec.h
src/models/: Call.h  Channel.h  Guild.h  Message.h  Snowflake.h  Types.h  User.h  VoiceState.h
src/network/: DiscordClient.cpp  DiscordClient.h  GatewayClient.cpp  GatewayClient.h  VoiceClient.cpp  VoiceClient.h
src/ui/: LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/utils/: AvatarCache.cpp  AvatarCache.h  DiscordMarkdown.cpp  DiscordMarkdown.h  TokenStorage.cpp  TokenStorage.h
